<resources>
    <string name="app_name">StockKeeper</string>
    <string name="main_page_header">Stock Market Search</string>
    <string name="stock_input_placeholder">Enter Stock Symbol</string>
    <string name="get_quote">Get Quote</string>
    <string name="clear">Clear</string>
    <string name="enter_valid_input">Please enter a stock name or symbol</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Current</string>
    <string name="tab_text_2">Historical</string>
    <string name="tab_text_3">News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stock_details">Stock Details</string>
    <string name="indicators">Indicators</string>
    <string name="indicator_change">Change</string>
    <string name="stock_symbol">Stock Symbol</string>
    <string name="stock_price">Last Price</string>
    <string name="stock_change">Change</string>
    <string name="stock_timestamp">Timestamp</string>
    <string name="stock_open">Open</string>
    <string name="stock_close">Close</string>
    <string name="stock_range">Day\'s Range</string>
    <string name="stock_volume">Volume</string>
    <string name="favorites_header">Favorites</string>
    <string name="autorefresh">AutoRefresh</string>

    <string-array name="indicator_items">
        <item>Price</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>STOCH</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
        <item>BBANDS</item>
        <item>MACD</item>
    </string-array>

    <string-array name="sort_cols">
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
    </string-array>

    <string-array name="sort_order">
        <item>Order</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>


</resources>
